--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:18.04
 
 RUN apt update
 RUN apt install -y \
-make git g++ libhdf5-mpi-dev libfftw3-dev libopenmpi-dev openmpi-bin
+make git g++ libhdf5-mpi-dev libfftw3-dev libopenmpi-dev openmpi-bin python3
 
 VOLUME ["/etc/gitlab-runner"]
 
