--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,18 +27,20 @@ compil opt :
     - tail -n +5 Makefile >> Makefile.valid
     - make -j4 -f Makefile.valid
 
-#checks that the code runs without error
+#checks that the code runs without error in serial dbg
 run serial 1:1:
   stage: test
   script:
-    - ./flups_validation -ns 1
+    - ./flups_validation -bc 3 3 3 3 3 3
+    - cat ./data/validation_3d_333333_typeGreen\=0.err
   dependencies: 
     - compil dbg
 
-run parallel 1:1:
+run serial 2:1:
   stage: test
   script:
-    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32
+    - ./flups_validation -bc 0 1 4 4 1 1
+    - cat ./data/validation_3d_014411_typeGreen\=0.err
   dependencies: 
     - compil dbg
 
