--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,8 +31,11 @@ compil opt :
 run serial 1:1:
   stage: test
   script:
-    - ./flups_validation -bc 3 3 3 3 3 3
-    - cat ./data/validation_3d_333333_typeGreen\=0.txt
+    - ./flups_validation -bc 3 3 3 3 3 3 -res 8
+    - cp data/validation_3d_333333_typeGreen\=0.txt data/validation_3d_444444_typeGreen\=0.txt
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_444444_typeGreen=0.txt'))"
+    # - ./flups_validation -bc 3 3 3 3 3 3
+    # - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_333333_typeGreen=0.txt'))"
   dependencies: 
     - compil dbg
 
@@ -40,6 +43,7 @@ run serial 2:1:
   stage: test
   script:
     - ./flups_validation -bc 0 1 4 4 1 1
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_014411_typeGreen=0.txt'))"
     - cat ./data/validation_3d_014411_typeGreen\=0.txt
   dependencies: 
     - compil dbg
