--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,11 +31,8 @@ compil opt :
 run serial 1:1:
   stage: test
   script:
-    - ./flups_validation -bc 3 3 3 3 3 3 -res 8
-    - cp data/validation_3d_333333_typeGreen\=0.txt data/validation_3d_444444_typeGreen\=0.txt
-    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_444444_typeGreen=0.txt'))"
-    # - ./flups_validation -bc 3 3 3 3 3 3
-    # - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_333333_typeGreen=0.txt'))"
+    - ./flups_validation -bc 3 3 3 3 3 3
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_333333_typeGreen=0.txt'))"
   dependencies: 
     - compil dbg
 
@@ -48,7 +45,69 @@ run serial 2:1:
   dependencies: 
     - compil dbg
 
-#validation all types of BCs with 1 kernel
+run serial 3:1:
+  stage: test
+  script:
+    - ./flups_validation -bc 3 3 1 4 1 1
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_331411_typeGreen=0.txt'))"
+  dependencies: 
+    - compil dbg
+
+run serial 4:1:
+  stage: test
+  script:
+    - ./flups_validation -bc 3 3 0 0 1 1
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_330011_typeGreen=0.txt'))"
+  dependencies: 
+    - compil dbg
+
+
+#checks that the code runs without error in MPI dbg
+run MPI 1:1:
+  stage: test
+  script:
+    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 4 4
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411444_typeGreen=0.txt'))"
+  dependencies: 
+    - compil dbg
+
+run MPI 2:1:
+  stage: test
+  script:
+    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 4 4 -k 2
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411444_typeGreen=0.txt'))"
+  dependencies: 
+    - compil dbg
+
+run MPI 3:1:
+  stage: test
+  script:
+    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 3 3 1 4 1 1
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_331411_typeGreen=0.txt'))"
+  dependencies: 
+    - compil dbg
+
+run MPI 4:1:
+  stage: test
+  script:
+    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 3 3
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411433_typeGreen=0.txt'))"
+  dependencies: 
+    - compil dbg    
+
+
+#checks that the code runs without error in MPI-OMP dbg
+run MPI-OMP 1:1:
+  stage: test
+  script:
+    - export OMP_NUM_THREADS=2
+    - mpirun -np 2 ./flups_validation -np 1 2 1 -res 32 -bc 4 1 4 4 3 3
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_414433_typeGreen=0.txt'))"
+  dependencies: 
+    - compil dbg
+
+
+#validation all types of BCs with 1 kernel (serial)
 validate3D all BCs:
   stage: test
   script:
@@ -56,9 +115,10 @@ validate3D all BCs:
   dependencies: 
     - compil opt
 
-# converge3D all kernels :
-#   stage: test
-#   script:
-#     - python3.7 ./scripts/test_3D_kerns.py
-#   dependencies: 
-#     - compil opt
+#validation convergence in unbounded for all kernels (parallel)
+converge3D all kernels :
+  stage: test
+  script:
+    - python3.7 ./scripts/test_3D_kerns.py
+  dependencies: 
+    - compil opt
