--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,14 +61,26 @@ run serial 4:1:
   dependencies: 
     - compil dbg
 
+run extra 1:1:
+  stage: test
+  script:
+    - ./flups_validation -bc 4 1 1 4 4 4
+    - cat ./data/validation_3d_411444_typeGreen\=0.txt
+    - ./flups_validation -bc 4 4 0 4 4 4
+    - cat ./data/validation_3d_440444_typeGreen\=0.txt
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411444_typeGreen=0.txt'))"
+  dependencies: 
+    - compil dbg
 
 #checks that the code runs without error in MPI dbg
-run MPI 1:1:
+run extra 2:1:
   stage: test
   script:
     - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 4 4
-    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411444_typeGreen=0.txt'))"
     - cat ./data/validation_3d_411444_typeGreen=0.txt
+    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 4 0 4 4 4
+    - cat ./data/validation_3d_440444_typeGreen=0.txt
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411444_typeGreen=0.txt'))"
   dependencies: 
     - compil dbg
 
@@ -76,8 +88,8 @@ run MPI 2:1:
   stage: test
   script:
     - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 4 4 -k 2
-    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411444_typeGreen=2.txt'))"
     - cat ./data/validation_3d_411444_typeGreen=2.txt
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411444_typeGreen=2.txt'))"
   dependencies: 
     - compil dbg
 
