--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -137,7 +137,7 @@ validate3D all BCs:
   stage: validation
   only:
     - master@examples/flups
-    - /^[09]*-job-failed.*$/i@examples/flups
+    - /.+-job-failed.*$/i@examples/flups
   script:
     - export OMP_NUM_THREADS=1
     - python3.7 ./scripts/test_3D_bcs.py
