--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ compil opt :
   stage: build
   only:
     - master@examples/flups
-    - /.+-job-failed.*$/i@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
   artifacts: 
     paths: 
       - flups_validation
@@ -39,7 +39,7 @@ run serial 1:1:
   stage: test
   only:
     - master@examples/flups
-    - /.+-job-failed.*$/i@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
   script:
     - ./flups_validation -bc 3 3 3 3 3 3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_333333_typeGreen=0.txt'))"
@@ -50,7 +50,7 @@ run serial 2:1:
   stage: test
   only:
     - master@examples/flups
-    - /.+-job-failed.*$/i@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
   script:
     - ./flups_validation -bc 0 1 4 4 1 1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_014411_typeGreen=0.txt'))"
@@ -61,7 +61,7 @@ run serial 3:1:
   stage: test
   only:
     - master@examples/flups
-    - /.+-job-failed.*$/i@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
   script:
     - ./flups_validation -bc 3 3 1 4 1 1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_331411_typeGreen=0.txt'))"
@@ -72,7 +72,7 @@ run serial 4:1:
   stage: test
   only:
     - master@examples/flups
-    - /.+-job-failed.*$/i@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
   script:
     - ./flups_validation -bc 3 3 0 0 1 1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_330011_typeGreen=0.txt'))"
@@ -85,7 +85,7 @@ run MPI 1:1:
   stage: test
   only:
     - master@examples/flups
-    - /.+-job-failed.*$/i@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
   script:
     - echo $OMP_NUM_THREADS
     - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 4 4 4
@@ -97,7 +97,7 @@ run MPI 2:1:
   stage: test
   only:
     - master@examples/flups
-    - /.+-job-failed.*$/i@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
   script:
     - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 4 4 -k 2
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411444_typeGreen=2.txt'))"
@@ -108,7 +108,7 @@ run MPI 3:1:
   stage: test
   only:
     - master@examples/flups
-    - /.+-job-failed.*$/i@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
   script:
     - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 3 3 1 4 1 1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_331411_typeGreen=0.txt'))"
@@ -119,7 +119,7 @@ run MPI 4:1:
   stage: test
   only:
     - master@examples/flups
-    - /.+-job-failed.*$/i@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
   script:
     - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 3 3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411433_typeGreen=0.txt'))"
@@ -132,7 +132,7 @@ run MPI-OMP 1:1:
   stage: test
   only:
     - master@examples/flups
-    - /.+-job-failed.*$/i@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
   script:
     - export OMP_NUM_THREADS=2
     - echo $OMP_NUM_THREADS
@@ -147,7 +147,7 @@ validate3D all BCs:
   stage: validation
   only:
     - master@examples/flups
-    - /.+-job-failed.*$/i@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
   script:
     - export OMP_NUM_THREADS=1
     - python3.7 ./scripts/test_3D_bcs.py
