:green_heart: updating the CI test to run for a merge_request

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ compil opt :
   only:
     - master@examples/flups
     - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
   artifacts: 
     paths: 
       - flups_validation
@@ -40,6 +41,7 @@ run serial 1:1:
   only:
     - master@examples/flups
     - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
   script:
     - ./flups_validation -bc 3 3 3 3 3 3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_333333_typeGreen=0.txt'))"
@@ -51,6 +53,7 @@ run serial 2:1:
   only:
     - master@examples/flups
     - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
   script:
     - ./flups_validation -bc 0 1 4 4 1 1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_014411_typeGreen=0.txt'))"
@@ -62,6 +65,7 @@ run serial 3:1:
   only:
     - master@examples/flups
     - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
   script:
     - ./flups_validation -bc 3 3 1 4 1 1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_331411_typeGreen=0.txt'))"
@@ -73,6 +77,7 @@ run serial 4:1:
   only:
     - master@examples/flups
     - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
   script:
     - ./flups_validation -bc 3 3 0 0 1 1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_330011_typeGreen=0.txt'))"
@@ -86,6 +91,7 @@ run MPI 1:1:
   only:
     - master@examples/flups
     - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
   script:
     - echo $OMP_NUM_THREADS
     - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 4 4 4
@@ -98,6 +104,7 @@ run MPI 2:1:
   only:
     - master@examples/flups
     - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
   script:
     - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 4 4 -k 2
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411444_typeGreen=2.txt'))"
@@ -109,6 +116,7 @@ run MPI 3:1:
   only:
     - master@examples/flups
     - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
   script:
     - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 3 3 1 4 1 1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_331411_typeGreen=0.txt'))"
@@ -120,6 +128,7 @@ run MPI 4:1:
   only:
     - master@examples/flups
     - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
   script:
     - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 3 3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411433_typeGreen=0.txt'))"
@@ -133,6 +142,7 @@ run MPI-OMP 1:1:
   only:
     - master@examples/flups
     - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
   script:
     - export OMP_NUM_THREADS=2
     - echo $OMP_NUM_THREADS
@@ -148,6 +158,7 @@ validate3D all BCs:
   only:
     - master@examples/flups
     - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
   script:
     - export OMP_NUM_THREADS=1
     - python3.7 ./scripts/test_3D_bcs.py
@@ -159,6 +170,8 @@ validate3D all BCs:
 #   stage: convergence
 #   only:
 #     - master@examples/flups
+#     - /^[0-9]-job-failed.*$/i@examples/flups
+#     - merge_requests
 #   script:
 #     - export OMP_NUM_THREADS=2
 #     - python3.7 -v ./scripts/test_3D_kerns.py
