--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -135,6 +135,29 @@ run MPI 4:1:
   dependencies: 
     - compil dbg    
 
+run MPI 5:1:
+  stage: test
+  only:
+    - master@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
+  script:
+    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 17 -bc 4 4 3 3 1 0
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_443310_typeGreen=0.txt'))"
+  dependencies: 
+    - compil dbg  
+    
+run MPI 6:1:
+  stage: test
+  only:
+    - master@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
+  script:
+    - mpirun -np 3 ./flups_validation -np 1 3 1 -res 17 -bc 1 1 4 1 1 1 
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_114111_typeGreen=0.txt'))"
+  dependencies: 
+    - compil dbg  
 
 #checks that the code runs without error in MPI-OMP dbg
 run MPI-OMP 1:1:
