--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,39 @@ compil opt :
     - tail -n +27 Makefile >> Makefile.valid
     - make -j4 -f Makefile.valid
 
+compil all2all :
+  stage: build
+  only:
+    - master@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
+  script:
+    - echo "include make_arch/make.docker_valid_opt" > Makefile.valid
+    - tail -n +27 Makefile >> Makefile.valid
+    - make -j4 -f Makefile.valid all2all
+
+compil nb :
+  stage: build
+  only:
+    - master@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
+  script:
+    - echo "include make_arch/make.docker_valid_opt" > Makefile.valid
+    - tail -n +27 Makefile >> Makefile.valid
+    - make -j4 -f Makefile.valid nonblocking
+
+compil lib :
+  stage: build
+  only:
+    - master@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
+  script:
+    - echo "include make_arch/make.docker_valid_opt" > Makefile.valid
+    - tail -n +27 Makefile >> Makefile.valid
+    - make -j4 -f Makefile.valid lib
+
 #checks that the code runs without error in serial dbg
 run serial 1:1:
   stage: test
