--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,7 +124,7 @@ run MPI 1:1:
     - merge_requests
   script:
     - echo $OMP_NUM_THREADS
-    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 4 4 4
+    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 32 32 -bc 4 1 1 4 4 4 4
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411444_typeGreen=0.txt'))"
   dependencies: 
     - compil dbg
@@ -136,7 +136,7 @@ run MPI 2:1:
     - /^[0-9]-job-failed.*$/i@examples/flups
     - merge_requests
   script:
-    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 4 4 -k 2
+    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 32 32 -bc 4 1 1 4 4 4 -k 2
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411444_typeGreen=2.txt'))"
   dependencies: 
     - compil dbg
@@ -148,7 +148,7 @@ run MPI 3:1:
     - /^[0-9]-job-failed.*$/i@examples/flups
     - merge_requests
   script:
-    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 3 3 1 4 1 1
+    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 32 32 -bc 3 3 1 4 1 1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_331411_typeGreen=0.txt'))"
   dependencies: 
     - compil dbg
@@ -160,7 +160,7 @@ run MPI 4:1:
     - /^[0-9]-job-failed.*$/i@examples/flups
     - merge_requests
   script:
-    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 -bc 4 1 1 4 3 3
+    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 32 32 32 -bc 4 1 1 4 3 3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_411433_typeGreen=0.txt'))"
   dependencies: 
     - compil dbg    
@@ -172,7 +172,7 @@ run MPI 5:1:
     - /^[0-9]-job-failed.*$/i@examples/flups
     - merge_requests
   script:
-    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 17 -bc 4 4 3 3 1 0
+    - mpirun -np 4 ./flups_validation -np 2 2 1 -res 17 17 17 -bc 4 4 3 3 1 0
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_443310_typeGreen=0.txt'))"
   dependencies: 
     - compil dbg  
@@ -184,7 +184,7 @@ run MPI 6:1:
     - /^[0-9]-job-failed.*$/i@examples/flups
     - merge_requests
   script:
-    - mpirun -np 3 ./flups_validation -np 1 3 1 -res 17 -bc 1 1 4 1 1 1 
+    - mpirun -np 3 ./flups_validation -np 1 3 1 -res 17 17 17 -bc 1 1 4 1 1 1 
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_114111_typeGreen=0.txt'))"
   dependencies: 
     - compil dbg  
@@ -199,7 +199,7 @@ run MPI-OMP 1:1:
   script:
     - export OMP_NUM_THREADS=2
     - echo $OMP_NUM_THREADS
-    - mpirun -np 2 ./flups_validation -np 1 2 1 -res 32 -bc 4 1 4 4 3 3
+    - mpirun -np 2 ./flups_validation -np 1 2 1 -res 32 32 32 -bc 4 1 4 4 3 3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_414433_typeGreen=0.txt'))"
   dependencies: 
     - compil dbg
